--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   
   # Firebase dependencies
   firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
   cloud_firestore: ^5.4.4
   firebase_database: ^11.1.4
   
@@ -51,6 +52,12 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.3.2
   connectivity_plus: ^6.0.5
+  url_launcher: ^6.3.1
+  
+  # BLE for Gateway provisioning
+  flutter_blue_plus: ^1.32.12
+  permission_handler: ^11.3.1
+  crypto: ^3.0.5
   
   # Loading and animations
   loading_animation_widget: ^1.2.1
